Fix: align header,body,footer on their respective postions

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,28 +2,90 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
-}
-
-.header {
+  }
+  
+  .header {
   height: 72px;
   background: darkmagenta;
   color: white;
-}
-
-.footer {
+  }
+  
+  .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
-}
-
-.sidebar {
+  }
+  
+  .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
-}
-
-.card {
+  }
+  
+  .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
-}
+  }
+  
+  /* CHANGED */
+  
+  .header {
+  font-size: 32px;
+  font-weight: 900;
+  display: flex;
+  align-items: center;
+  padding-left: 16px;
+  }
+  
+  .footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  }
+  
+  body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  }
+  
+  ul {
+  padding: 0;
+  margin: 0;
+  }
+  
+  ul a{
+  text-decoration: none;
+  font-size: 24px;
+  color: white;
+  }
+  
+  ul li {
+  list-style-type: none;
+  }
+  
+  .contents {
+  display: flex;
+  flex: 1;
+  
+  }
+  
+  .sidebar {
+  flex-shrink: 0;
+  padding: 16px;
+  }
+  
+  .cards {
+  padding: 48px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  align-content: flex-start;
+  }
+  
+  .card {
+  width: 300px;
+  height: 200px;
+  padding: 20px;
+  }
